# ucs-software-architecture-project

./: README.md  app.py  checklist.md  pyproject.toml  run.py
app/: __init__.py  main.py
app/controllers/: data.py  registration.py
app/dao/: __init__.py  base_dao.py  course_dao.py  instituition_dao.py  institution_dao.py  registration_dao.py
app/models/: __init__.py  course.py  institution.py  registration.py
app/repositories/: __init__.py  base_rep.py  course_rep.py  institution_rep.py  registration_rep.py
app/templates/: base.jinja  filters.jinja  table.jinja
app/templates/dashboard/: _por_ano.html  _ranking.html  _ultimas_consultas.html  index.html
app/views/: base.jinja  filters.jinja  index.jinja  list.jinja  table.jinja
contrib/: env-sample
migrations/versions/: 0cf2715a57b1_init_migration.py  0d19b745aa4c_.py  28ed81fb691f_fix_years_together_in_register.py  50b42bc4b87f_fix_tirar_unique_together.py  7bdae25b007d_one_table.py  c505ad5fb0b4_add_unique_togheter_in_course_.py
tests_client/: upload_csv.py
